# CitiesJSON

./: CMakeLists.txt  CMakeSettings.json  Cities.cpp  Cities.h  Cities.ilk  README.md  cities.json  filters.json
CitiesExe/: CMakeLists.txt  main.cpp
googletest/: CMakeLists.txt
test/: CMakeLists.txt  Tests.cpp
